This will allow for easier testing of unreleased versions of Etaoin via git deps.
It also unconvered that our minimum Clojure version was 1.10, instead of the advertised v1.9.
Fixed.
* https://github.com/clj-commons/etaoin/issues/444[#444]: Visibility checks fixed for firefox and chrome (thanks https://github.com/daveyarwood[@daveyarwood]!)
* https://github.com/clj-commons/etaoin/issues/446[#446]: Bump Etaoin dependencies to current releases
* Docs
** Reviewed and updated API docstrings
** https://github.com/clj-commons/etaoin/issues/393[#393]: Add changelog
** https://github.com/clj-commons/etaoin/issues/426[#426]: Reorganize into separate guides

** https://github.com/clj-commons/etaoin/issues/396[#396]: Move from Markdown to AsciiDoc
** User guide
*** Reviewed, re-organized, hopefully clarified some things
*** Checking code blocks with https://github.com/lread/test-doc-blocks[test-doc-blocks]
*** https://github.com/clj-commons/etaoin/commit/f3f0370fb76bc353c14293243410db1641f99c70[f3f0370]: A new troubleshooting tip (thanks https://github.com/jkrasnay[@jkrasnay]!)
*** https://github.com/clj-commons/etaoin/pull/364[#364]: A new usage example (thanks https://github.com/kidd[kidd]!)
*** https://github.com/clj-commons/etaoin/issues/427[#427] https://github.com/clj-commons/etaoin/issues/359[#359]: Describe `execute` function
* Internal quality
** https://github.com/clj-commons/etaoin/issues/382[#382]: Fix process fork testing on Windows
** https://github.com/clj-commons/etaoin/issues/391[#391]: Identify browser name on failed ide tests
** https://github.com/clj-commons/etaoin/issues/390[#390]: Add internal clj-kondo config
** https://github.com/clj-commons/etaoin/issues/381[#381]: In addition to ubuntu, now also testing on macOS and Windows (using GitHub Actions https://github.com/clj-commons/etaoin/issues/392[#392] with parallelization https://github.com/clj-commons/etaoin/issues/420[#420])

== v0.4.6
